services/orpheus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orpheus
  namespace: microservices
  labels:
    app: orpheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orpheus
  template:
    metadata:
      labels:
        app: orpheus
    spec:
      containers:
      - name: orpheus
        image: ghcr.io/vimalmenon/micro-army/orpheus
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
