services/orpheus/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: youtube
  namespace: microservices
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: authelia-add-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: youtube.homelab.local
      http:
        paths:
          - backend:
              service:
                name: orpheus
                port:
                  number: 8000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - youtube.homelab.local
